--- a/layouts/partials/head_meta.html
+++ b/layouts/partials/head_meta.html
@@ -1,13 +1,13 @@
 <meta name="keywords" content="Khoa Pham, web developer, frontend developer, UX, UI, web developer Portland" >
 <meta name="description" content="Khoa Pham is a senior developer focusing on UX and writing clean code using latest technologies like Golang, Rails, EmberJS, and Postgres."/>
 <meta name="viewport" content="width=device-width initial-scale=1.0" />
-<link rel="canonical" href="http://www.khoapham.me/" />
+<link rel="canonical" href="{{ .Site.BaseURL }}" />
 <link rel="author" href="https://plus.google.com/103713398374675106375/"/>
 
 <!--FACEBOOK-->
 <meta property="og:title" content="Khoa Pham - Web Developer" >
 <meta property="og:site_name" content="Khoa Pham">
-<meta property="og:url" content="http://www.khoapham.me" >
+<meta property="og:url" content="{{ .Site.BaseURL }}" >
 <meta property="og:description" content="Khoa Pham is a senior developer focusing on UX and writing clean code using latest technologies like Golang, Rails, EmberJS, and Postgres." >
 <meta property="og:image" content="https://avatars0.githubusercontent.com/u/1144585" >
 <meta property="og:type" content="website" >
@@ -17,6 +17,6 @@
 <meta property="twitter:title" content="Khoa Pham is a senior developer focusing on UX and writing good code." >
 <meta property="twitter:description" content="Khoa Pham is a senior developer focusing on UX and writing clean code using latest technologies like Golang, Rails, EmberJS, and Postgres." >
 <meta property="twitter:creator" content="@pmkhoa" >
-<meta property="twitter:url" content="http://www.khoapham.me" >
+<meta property="twitter:url" content="{{ .Site.BaseURL }}" >
 <meta property="twitter:image" content="https://avatars0.githubusercontent.com/u/1144585" >
 
