--- a/static/scss/_site.scss
+++ b/static/scss/_site.scss
@@ -45,7 +45,14 @@ img {
 }
 
 a {
+    border-bottom: 1px solid #dddddd;
     color: $black;
+    text-decoration: none;
+    &:hover {
+        @include transition(all 0.15s);
+        @include transition-delay(0s);
+        border-bottom: 1px solid $black;
+    }
 }
 
 // Responsive Video
@@ -69,12 +76,10 @@ a {
     .inner-header {
         padding: 25px 15px 40px 15px;
     }
-    a {
-        text-decoration: none;
-    }
     #logo {
-        margin-bottom: 12px;
+        border: 0;
         font-size: 2.15em;
+        margin-bottom: 12px;
     }
     .header-nav {
         padding: 0;
@@ -93,12 +98,10 @@ a {
     text-align: center;
 }
 
-
-
 .Article-container {
     padding: 0 0 50px 0;
     .link-to-article {
-        text-decoration: none;
+        border-bottom: 0;
     }
     .Article-content {
         padding: 0 15px;
@@ -152,6 +155,9 @@ a {
         }
         .Article-summary {
             padding: 20px 15px 10px 15px;
+            &:hover {
+                background: none;
+            }
         }
         h4 {
             margin-top: 0;
