--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -13,7 +13,7 @@
             {{ end }}
         </title>
 
-        {{ partial "head_meta.html" }}
+        {{ partial "head_meta.html" . }}
 
 
         <!-- Icons -->
