--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -29,7 +29,7 @@
     <body lang="en">
         <nav class="header" role="banner">
             <div class="inner-header wrap clearfix">
-                <a id="logo" href="/">KHOA  PHAM</a>
+                <a id="logo" href="/">KHOA&nbsp;&nbsp;PHAM</a>
                 <ul class="header-nav">
                     <li class="nav-item"><a href="{{ .Site.BaseURL }}/blog" title="Blog">Blog</a></li>
                     <li class="nav-item"><a href="{{ .Site.BaseURL }}/about" title="About">About</a></li>
