Add Date to single blog

--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -1,4 +1,4 @@
-<a href="{{ .Permalink }}" class="link-to-article">
+<a href="{{ .RelPermalink }}" class="link-to-article">
     <div class="Article-summary">
         <h3>{{ .Title }}</h3>
         <p>{{ .Summary }}</p>
