--- a/static/scss/_site.scss
+++ b/static/scss/_site.scss
@@ -142,12 +142,14 @@ a {
         margin-top: 40px;
         .Article-related-content {
             padding-bottom: 20px;
+            max-width: 520px;
         }
         .link-to-article:last-of-type .Article-summary{
             border-bottom: 0;
         }
         .Article-related-title {
             text-align: center;
+            margin-bottom: 20px;
             span {
                 font-size: 0.7em;
                 margin-right: 10px;
