--- a/static/css/all.css
+++ b/static/css/all.css
@@ -333,7 +333,7 @@ h1, h2, h3, h4, h5 {
 
 h1 {
   font-size: 1.95em;
-  line-height: 1em;
+  line-height: 1.3;
   font-weight: 400; }
   @media only screen and (min-width: 40em) {
     h1 {
@@ -341,7 +341,7 @@ h1 {
 
 h2 {
   font-size: 1.45em;
-  line-height: 1em;
+  line-height: 1.2;
   font-weight: 400; }
   @media only screen and (min-width: 40em) {
     h2 {
