--- a/static/scss/_typography.scss
+++ b/static/scss/_typography.scss
@@ -63,7 +63,7 @@ h1, h2, h3, h4, h5 {
 
 h1 {
     font-size: 1.95em;
-    line-height: 1em;
+    line-height: 1.3;
     font-weight: 400;
     @include medium-screen-up {
         font-size: 2.15em;
@@ -72,7 +72,7 @@ h1 {
 
 h2 {
     font-size: 1.45em;
-    line-height: 1em;
+    line-height: 1.2;
     font-weight: 400;
     @include medium-screen-up {
         font-size: 1.65em;
