Add background to inline code

--- a/static/css/all.css
+++ b/static/css/all.css
@@ -365,6 +365,10 @@ strong {
 p {
   margin: 0.5em 0 1em 0; }
 
+code {
+  padding: 2px 5px;
+  background: #f0f0f0; }
+
 /******* Website style *******/
 html {
   box-sizing: border-box; }
